--- a/template/my_address.htm
+++ b/template/my_address.htm
@@ -20,14 +20,14 @@
 
 
 			<div class="tl">
-					<table cellspacing="0" cellpadding="0">
+					<table cellspacing="0" cellpadding="0" class='dt mtm'>
 						<tr class="th">
-							<td>{lang etuan:my_address_community}</td>
-							<td>{lang etuan:my_address_address}</td>
-							<td>{lang etuan:my_address_name}</td>
-							<td>{lang etuan:my_address_phone}</td>
-							<td>{lang etuan:my_address_email}</td>
-							<td>{lang etuan:my_operation}</td>
+							<th width='53'>{lang etuan:my_address_community}</th>
+							<th width='333'>{lang etuan:my_address_address}</th>
+							<th width='40'>{lang etuan:my_address_name}</th>
+							<th width='85'>{lang etuan:my_address_phone}</th>
+							<th width='171'>{lang etuan:my_address_email}</th>
+							<th width='70'>{lang etuan:my_operation}</th>
 						</tr>
 
 					<!--{if $list}-->
