--- a/template/my_product.htm
+++ b/template/my_product.htm
@@ -20,18 +20,18 @@
 
 
 			<div class="tl">
-					<table cellspacing="0" cellpadding="0">
+					<table cellspacing="0" cellpadding="0" class='dt mtm'>
 						<tr class="th">
-							<td>{lang etuan:my_product_supplier}</td>
-							<td>{lang etuan:my_product_name}</td>
-							<td>{lang etuan:my_product_market_price}</td>
-							<td>{lang etuan:my_product_supply_price}</td>
-							<td>{lang etuan:my_product_price}</td>
-							<td>{lang etuan:my_product_spec}</td>
-							<td>{lang etuan:my_product_unit_name}</td>
-							<td>{lang etuan:my_product_intro}</td>
-							<td>{lang etuan:my_product_credit_limit}</td>
-							<td>{lang etuan:my_operation}</td>
+							<th>{lang etuan:my_product_supplier}</th>
+							<th>{lang etuan:my_product_name}</th>
+							<th>{lang etuan:my_product_market_price}</th>
+							<th>{lang etuan:my_product_supply_price}</th>
+							<th>{lang etuan:my_product_price}</th>
+							<th>{lang etuan:my_product_spec}</th>
+							<th>{lang etuan:my_product_unit_name}</th>
+							<th>{lang etuan:my_product_intro}</th>
+							<th>{lang etuan:my_product_credit_limit}</th>
+							<th>{lang etuan:my_operation}</th>
 						</tr>
 
 					<!--{if $list}-->
