--- a/template/my_product_add.htm
+++ b/template/my_product_add.htm
@@ -78,11 +78,11 @@
 </tr>
 <tr>
 <td height="35" align="right">{lang etuan:my_product_intro}: <span class="rq">*</span></td>
-<td><textarea name="intro" id="intro" rows="5">{$row['intro']}</textarea></td>
+<td><textarea name="intro" id="intro" rows="5">{$row['intro']}</textarea>简介，在商品详细信息收起的情况显示</td>
 </tr>
 <tr>
 <td height="35" align="right">{lang etuan:my_product_description}: <span class="rq">*</span></td>
-<td><textarea name="description" id="description" rows="5">{$row['description']}</textarea>
+<td><textarea name="description" id="description" rows="5">{$row['description']}</textarea>详细介绍，在商品信息展开的情况下显示
 </td>
 </tr>
 <tr>
