--- a/template/my_supplier_view.htm
+++ b/template/my_supplier_view.htm
@@ -6,7 +6,7 @@
 		<em>&rsaquo;</em><a href="plugin.php?id=etuan:my&app=supplier">{lang etuan:my_supplier}</a>
 	</div>
 </div>
-
+<link rel="stylesheet" type="text/css" href="source/plugin/etuan/static/etuan.css" />
 
 <div id="ct" class="ct2_a wp cl">
 	<div class="mn">
@@ -14,7 +14,7 @@
 			<h1 class="mt"><img alt="thread" src="{STATICURL}image/feed/article.gif" class="vm" /> {lang etuan:my_supplier}</h1>
 
 			<div class="tl">
-				<table cellspacing="0" cellpadding="0">
+				<table cellspacing="0" cellpadding="0" class='tab_bottom' >
 					<tr class="th">
 					<tr><td>{lang etuan:my_supplier_name}</td><td><img src="$supplier['logo']">$supplier['name']</td></tr>
 					<tr><td>{lang etuan:my_supplier_phone}</td><td>$supplier['phone']</td></tr>
