--- a/template/my_tuan_view_profit_and_loss.htm
+++ b/template/my_tuan_view_profit_and_loss.htm
@@ -26,7 +26,7 @@
 							<td class="icn"><a href="forum.php?mod=viewthread&tid=$tuan_thread[tid]" target="_blank"> <img src="source/plugin/etuan/static/icon_post.gif" /> </a></td>
 							<th> <a href="forum.php?mod=viewthread&tid=$tuan_thread[tid]" target="_blank">$tuan_thread[subject]</a> </th>
 							<td>{$tuan_thread[begin_date]} - {$tuan_thread[end_date]}</td>
-							<td class="by">{$tuan_thread[status]}</td>
+							<td class="by">{$tuan_statuss[$tuan_thread[tuan_status]]}</td>
 						</tr>
 					</table>
 </div>
